--- a/pages/indexHomeView/index.wxss
+++ b/pages/indexHomeView/index.wxss
@@ -46,7 +46,7 @@
     display: block;
     height: 4px;
     width: 30%;
-    background: #e3393c;
+    background: #43aaff;
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -89,7 +89,7 @@
 }
 
 .listBox-hade text {
-    border-left: 6rpx solid #e33939;
+    border-left: 6rpx solid #43aaff;
     color: #333;
     font-weight: 600;
     font-size: 30rpx;
