--- a/pages/indexAddVolunteer/index.wxml
+++ b/pages/indexAddVolunteer/index.wxml
@@ -46,7 +46,7 @@
             </view>
             <view class="weui-cells__title">请选择身份信息以更快通过审核</view>
             <view class="weui-cells weui-cells_after-title">
-                <scroll-view class="tab-h" >
+                <view class="tab-h" >
                     <radio-group class="radio-group" bindtap="bindIdentityChange" style="padding: 10px 0; text-align: center;">
                         <label class="radio" bindtap="swichNav" data-current="0">
                             <radio name="identity" value="1" bindtap="swichNav" data-current="0" checked="checked" />学生
@@ -61,9 +61,9 @@
                             <radio name="identity" value="4" bindtap="swichNav" data-current="3" />其它
                         </label>
                     </radio-group>
-                </scroll-view>
-                <view class="tab-content" current="{{currentTab}}" duration="" style="background: transparent; height: {{heightBox}};">
-                    <swiper-item style="background: transparent; height: 150px;">
+                </view>
+                <view class="tab-content">
+                    <view wx:if="{{currentTab==0}}">
                         <view class="weui-cells weui-cells_after-title">
                             <view class="weui-cell weui-cell_input">
                                 <view class="weui-cell__hd">
@@ -82,8 +82,8 @@
                                 </view>
                             </view>
                         </view>
-                    </swiper-item>
-                    <swiper-item style="background: transparent;">
+                    </view>
+                    <view wx:elif="{{currentTab==1}}">
                         <view class="weui-cells weui-cells_after-title">
                             <view class="weui-cell weui-cell_input">
                                 <view class="weui-cell__hd">
@@ -94,9 +94,9 @@
                                 </view>
                             </view>
                         </view>
-                    </swiper-item>
-                    <swiper-item></swiper-item>
-                    <swiper-item>
+                    </view>
+                    <view wx:elif="{{currentTab==2}}"></view>
+                    <view wx:elif="{{currentTab==3}}">
                         <view class="weui-cells weui-cells_after-title">
                             <view class="weui-cell weui-cell_input">
                                 <view class="weui-cell__hd">
@@ -123,7 +123,7 @@
                                 </view>
                             </view>
                         </view>
-                    </swiper-item>
+                    </view>
                 </view>
             </view>
             <view class="weui-cells weui-cells_after-title" style="margin-top: 10px;">
@@ -151,6 +151,8 @@
                         </radio-group>
                     </view>
                 </view>
+
+
                 <view class="weui-cell weui-cell_input">
                     <view class="weui-cell__hd">
                         <view class="weui-label">联系电话</view>
@@ -171,13 +173,13 @@
             <view style="padding: 10px 0; text-align: center;">
                 <checkbox-group bindchange="checkboxChange">
                     <label class="checkbox">
-                        <checkbox value="1" checked=""/>
+                        <checkbox value="1" value="{{ form.checkbox }}" checked=""/>
                     </label>
-                    <text bindtap="addVolunteerNotes" style="color: ＃43aaff;">已阅读并同意《志愿者须知》</text>
+                    <text bindtap="addVolunteerNotes" style="color: #43aaff;">已阅读并同意《志愿者须知》</text>
                 </checkbox-group>
             </view>
-            <view class="button-sp-area" style="margin-top: 0px;">
-                <button class="weui-btn" type="primary" formType="submit">提交</button>
+            <view class="button-sp-area" style="margin-top: 0px; width: 90%;">
+                <button class="weui-btn" style=" background: #43aaff; color: #fff; " formType="submit">提交</button>
             </view>
         </form>
     </view>
