--- a/pages/indexHomeView/index.wxml
+++ b/pages/indexHomeView/index.wxml
@@ -49,37 +49,22 @@
             <swiper-item>
                 <scroll-view scroll-y="true" class="scoll-h">
                     <view class="item-ans">
-                        <view class="item-ans-contern">
-                            <view class="avatar">
-                                <image class="img" src="../image/bg1.png"></image>
-                            </view>
-                            <view class="expertInfo">
-                                <view class="name">滨湖湘江之水保护公益活动,滨湖湘 江之水保护公益活动
+                        <view wx:if="{{dataListActive.length==0}}" class="pageTextCon">暂无数据</view>
+                        <view wx:else>
+                            <view class="item-ans-contern" wx:for="{{dataListActive}}">
+                                <view class="avatar">
+                                    <image class="img" src="../image/bg1.png"></image>
                                 </view>
-                                <view class="tag">
-                                    <image class="img" src="../image/times.png"></image>
-                                    知名情感博主
-                                </view>
-                                <view class="answerHistory">
-                                    <image class="img" src="../image/place.png"></image>
-                                    河西商业广场河西商业广场河西商业广场河西商业广场
-                                </view>
-                            </view>
-                        </view>
-                        <view class="item-ans-contern">
-                            <view class="avatar">
-                                <image class="img" src="../image/bg1.png"></image>
-                            </view>
-                            <view class="expertInfo">
-                                <view class="name">滨湖湘江之水保护公益活动,滨湖湘 江之水保护公益活动
-                                </view>
-                                <view class="tag">
-                                    <image class="img" src="../image/times.png"></image>
-                                    知名情感博主
-                                </view>
-                                <view class="answerHistory">
-                                    <image class="img" src="../image/place.png"></image>
-                                    河西商业广场河西商业广场河西商业广场河西商业广场
+                                <view class="expertInfo">
+                                    <view class="name">{{item.name}}</view>
+                                    <view class="tag">
+                                        <image class="img" src="../image/times.png"></image>
+                                        {{item.activity_starttime}}
+                                    </view>
+                                    <view class="answerHistory">
+                                        <image class="img" src="../image/place.png"></image>
+                                        {{item.activity_place}}
+                                    </view>
                                 </view>
                             </view>
                         </view>
@@ -90,7 +75,8 @@
                 <scroll-view scroll-y="true" class="scoll-h">
                     <view class="itemBox3">
                         <view class="btnsAdd">
-                            <image src="../image/comment.png"></image>发表评论</view>
+                            <image src="../image/comment.png"></image>发表评论
+                        </view>
                     </view>
                 </scroll-view>
             </swiper-item>
