--- a/pages/indexMakeManage/index.wxml
+++ b/pages/indexMakeManage/index.wxml
@@ -4,45 +4,23 @@
         <view class="list" wx:for="{{dataList}}">
             <view>
                 <view>预约服务</view>
-                <view>管道维修</view>
+                <view>{{item.type_name}}</view>
             </view>
             <view>
                 <view>预约上门时间</view>
-                <view>管道维修</view>
+                <view>{{item.booking_time}}</view>
             </view>
             <view>
                 <view>预约地点</view>
-                <view>管道维修</view>
+                <view>{{item.address}}</view>
             </view>
             <view>
                 <view>联系方式</view>
-                <view>管道维修</view>
+                <view>{{item.phone}}</view>
             </view>
             <view>
                 <view>备注信息</view>
-                <view>管道维修</view>
-            </view>
-        </view>
-        <view class="list">
-            <view>
-                <view>预约服务</view>
-                <view>管道维修</view>
-            </view>
-            <view>
-                <view>预约上门时间</view>
-                <view>管道维修</view>
-            </view>
-            <view>
-                <view>预约地点</view>
-                <view>管道维修</view>
-            </view>
-            <view>
-                <view>联系方式</view>
-                <view>管道维修</view>
-            </view>
-            <view>
-                <view>备注信息</view>
-                <view>管道维修</view>
+                <view>{{item.remark}}</view>
             </view>
         </view>
     </view>
