--- a/pages/indexUserMake/index.wxml
+++ b/pages/indexUserMake/index.wxml
@@ -4,30 +4,30 @@
         <view class="list" wx:for="{{dataList}}">
             <view>
                 <view>预约服务</view>
-                <view>管道维修</view>
+                <view>{{item.type_name}}</view>
             </view>
             <view>
                 <view>预约上门时间</view>
-                <view>管道维修</view>
+                <view>{{item.booking_time}}</view>
             </view>
             <view>
                 <view>预约地点</view>
-                <view>管道维修</view>
+                <view>{{item.address}}</view>
             </view>
             <view>
                 <view>联系方式</view>
-                <view>管道维修</view>
+                <view>{{item.phone}}</view>
             </view>
             <view>
                 <view>备注信息</view>
-                <view>管道维修</view>
+                <view>{{item.remark}}</view>
             </view>
             <view>
-                <view class="text-green">预约成功</view>
+                <view class="text-green"> </view>
                 <view class="btns"><text>评价</text></view>
             </view>
         </view>
-        <view class="list">
+        <!-- <view class="list">
             <view>
                 <view>预约服务</view>
                 <view>管道维修</view>
@@ -51,6 +51,6 @@
             <view>
                 <view class="text-red">预约成功</view>
             </view>
-        </view>
+        </view> -->
     </view>
 </view>
