--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
-<!--index.wxml-->
 <view class="auth">
     <view class="title">微信授权页面</view>
     <view class="describe">此页面是微信授权页面，点击下方按钮弹出授权或跳转页面</view>
-    <!-- <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo">点击微信授权</button> -->
+    <button class="btns" open-type='getUserInfo' wx:if="{{canIUse}}" bindgetuserinfo='onAuth'>点击微信授权</button>
+    <navigator wx:if="{{!canIUse}}" class="btns" open-type="reLaunch" hover-class="other-navigator-hover">已经授权点击调转</navigator>
 </view>
