--- a/pages/indexHomeView/index.wxml
+++ b/pages/indexHomeView/index.wxml
@@ -1,6 +1,13 @@
 <view class="listContainer">
     <view class="bannerContainer">
         <image src="../image/banner1.png"></image>
+        <view class="evaluateBox">
+            <image src="../image/evaluate.png"></image>
+            <view>
+                <text>满意度</text>
+                <text>{{markForTeam}}分</text>
+            </view>
+        </view>
     </view>
     <view>
         <scroll-view scroll-x="true" class="tab-h" scroll-left="{{scrollLeft}}">
@@ -78,6 +85,11 @@
                         <view class="btnsAdd" bindtap="addEvaluate">
                             <image src="../image/comment.png"></image>发表评论
                         </view>
+                    </view>
+                    <view class="evaluateList" wx:for="{{dataListEvaluateList}}">
+                        <view>{{item.user_name}}</view>
+                        <view>{{item.star_level}} 分</view>
+                        <view>{{item.content}}</view>
                     </view>
                 </scroll-view>
             </swiper-item>
