--- a/pages/indexHomeView/index.wxss
+++ b/pages/indexHomeView/index.wxss
@@ -9,11 +9,44 @@
 .bannerContainer {
     width: 100%;
     height: 210px;
+    position: relative;
 }
 
 .bannerContainer image {
     width: 100%;
     height: 100%;
+}
+
+.evaluateBox {
+    width: 120rpx;
+    height: 120rpx;
+    position: absolute;
+    right: 30rpx;
+    bottom: 30rpx;
+    font-size: 24rpx;
+}
+
+.evaluateBox > view {
+    position: absolute;
+    right: 0rpx;
+    bottom: 0rpx;
+    width: 120rpx;
+    height: 120rpx;
+    text-align: center;
+}
+
+.evaluateBox > view text {
+    color: #fff;
+    display: block;
+}
+
+.evaluateBox > view text:nth-child(1) {
+    padding-top:14px;
+    font-size:10px;
+}
+
+.evaluateBox > view text:nth-child(2) {
+    font-size:16px;
 }
 
 .tab-h {
@@ -244,4 +277,31 @@
     vertical-align: middle;
     margin-right: 10rpx;
     margin-top: -5rpx;
+}
+
+.evaluateList {
+    padding:20rpx;
+    background:#fff;
+    border-radius:10px;
+    margin-top: 10px;
+}
+
+.evaluateList view:nth-child(1) {
+    color: #333;
+    font-size: 30rpx;
+    font-weight: 600;
+}
+
+.evaluateList view:nth-child(2) {
+    color: #666;
+    font-size: 26rpx;
+}
+
+.evaluateList view:nth-child(2) text.active {
+    color: #e33939;
+}
+
+.evaluateList view:nth-child(3) {
+    color: #666;
+    font-size: 26rpx;
 }
