--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,29 +1,35 @@
 page {
     height: 100%;
     display: table;
+    background: #fff;
 }
 
 .auth {
     margin-top: 0;
     text-align: center;
-    display: table-cell;
+    /* display: table-cell; */
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-start;
-    padding: 100rpx;
     vertical-align: middle;
 }
 
-.img {
+.logo {
     border-radius: 50%;
     border: 1px solid #fff;
     background-color: #fff;
-    margin: 0 0 60rpx;
+    margin: 50rpx 0 5rpx;
     display: inline-block;
-    width: 200rpx;
-    height: 200rpx;
+    width: 120rpx;
+    height: 120rpx;
     line-height: 0;
+}
+
+.loding {
+    display: inline-block;
+    width: 34rpx;
+    height: 25rpx;
 }
 
 .title {
