--- a/pages/indexVolunteerList/index.wxml
+++ b/pages/indexVolunteerList/index.wxml
@@ -4,7 +4,7 @@
     <view wx:else>
         <view class="list" wx:for="{{dataListView}}">
             <image src="../image/user/userPhoto.png"></image>
-            <view class="contern">
+            <view class="contern" bindtap="clickTelUser" data-item-phone="{{item.phone}}">
                 <text class="name">{{item.name}} <text wx:if="{{item.sex==1}}">男</text><text wx:else="{{item.sex==2}}">女</text></text>
                 <text class="tims">联系方式：{{item.phone}}</text>
                 <text class="tims">加入时间：{{item.create_time}}</text>
