--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,8 @@
 <view class="auth">
     <view>
         <image src="../image/logo.jpg" class='logo'></image>
-        <view style='font-size: 16px;'>滨湖志愿者平台</view>
+        <view class='title'>滨湖志愿者平台</view>
     </view>
-    <view>
-    <image src="../image/loging.gif" class='loding'></image>
-    </view>
-    <!-- <view class="title">微信授权页面</view>
-    <view class="describe">此页面是微信授权页面，点击下方按钮弹出授权或跳转页面</view>
     <button class="btns" open-type='getUserInfo' wx:if="{{canIUse}}" bindgetuserinfo='onAuth'>点击微信授权</button>
-    <navigator wx:if="{{!canIUse}}" class="btns" open-type="reLaunch" hover-class="other-navigator-hover">已经授权点击调转</navigator> -->
+    <navigator wx:if="{{!canIUse}}" class="btns" open-type="reLaunch" hover-class="other-navigator-hover">已经授权点击调转</navigator>
 </view>
