--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -19,7 +19,7 @@ page {
     border-radius: 50%;
     border: 1px solid #fff;
     background-color: #fff;
-    margin: 50rpx 0 5rpx;
+    margin: 150rpx 0 5rpx;
     display: inline-block;
     width: 120rpx;
     height: 120rpx;
@@ -51,7 +51,7 @@ page {
 .btns {
     padding: 0 60rpx;
     background-color: #19be6b;
-    margin: 20rpx 0 200rpx;
+    margin: 200PX 0 0rpx;
     text-align: center;
     vertical-align: middle;
     touch-action: manipulation;
