--- a/pages/indexHome/index.wxss
+++ b/pages/indexHome/index.wxss
@@ -2,6 +2,15 @@
     position: relative;
 }
 
+.swiper {
+  height: 100%;
+  width: 100%;
+}
+.swiper image {
+  height: 100%;
+  width: 100%;
+}
+
 .bgBanner {
     background: #26a0f5;
     height: 215rpx;
