--- a/pages/indexHome/index.wxml
+++ b/pages/indexHome/index.wxml
@@ -1,5 +1,4 @@
 <view class="indexHome">
-    <view class="bgBanner"></view>
     <view class="bgBannerBox">
         <swiper class="swiper" indicator-dots="true" autoplay="true" interval="2000" duration="1000">  
         <block wx:for="{{movies}}" wx:for-index="index">  
@@ -14,21 +13,21 @@
             <image src="../image/home/icon1.png"></image>
             <view>环境保护</view>
         </view>
-        <view bindtap="clickIndexView" data-item-path="../indexHomeView/index" data-item-title="老人关爱" data-item-uuid="153049724075277">
+        <view bindtap="clickIndexView" data-item-path="../indexHomeView/index" data-item-title="关爱老人" data-item-uuid="153049724075277">
             <image src="../image/home/icon2.png"></image>
-            <view>老人关爱</view>
+            <view>关爱老人</view>
         </view>
-        <view bindtap="clickIndexView" data-item-path="../indexHomeView/index" data-item-title="手工课堂" data-item-uuid="153049725197393">
+        <view bindtap="clickIndexView" data-item-path="../indexHomeView/index" data-item-title="快乐手工" data-item-uuid="153049725197393">
             <image src="../image/home/icon3.png"></image>
-            <view>手工课题</view>
+            <view>快乐手工</view>
         </view>
-        <view bindtap="clickIndexView" data-item-path="../indexHomeView/index" data-item-title="科创园地" data-item-uuid="153049726659970">
+        <view bindtap="clickIndexView" data-item-path="../indexHomeView/index" data-item-title="科创乐园" data-item-uuid="153049726659970">
             <image src="../image/home/icon4.png"></image>
-            <view>科创园地</view>
+            <view>科创乐园</view>
         </view>
-        <view bindtap="clickIndexView" data-item-path="../indexHomeView/index" data-item-title="亲子活动" data-item-uuid="153049728164352">
+        <view bindtap="clickIndexView" data-item-path="../indexHomeView/index" data-item-title="亲子乐园" data-item-uuid="153049728164352">
             <image src="../image/home/icon5.png"></image>
-            <view>亲子活动</view>
+            <view>亲子乐园</view>
         </view>
         <view bindtap="clickIndexView" data-item-path="../indexHomeView/index" data-item-title="家电维修" data-item-uuid="153049730503275">
             <image src="../image/home/icon6.png"></image>
@@ -48,6 +47,6 @@
         </view>
     </view>
     <view class="telBox" bindtap="clickTelUser">
-        <image src="../image/home/tel.png"></image>
+        <image src="../image/home/tel.png"></image> 拨打电话
     </view>
 </view>
