--- a/pages/indexHome/index.wxss
+++ b/pages/indexHome/index.wxss
@@ -2,6 +2,10 @@
     position: relative;
 }
 
+page {
+    background: #fff;
+}
+
 .swiper {
   height: 100%;
   width: 100%;
@@ -18,14 +22,12 @@
 }
 
 .bgBannerBox {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 99;
     height: 430rpx;
     width: 100%;
     padding: 0 30rpx;
     box-sizing: border-box;
+    margin-bottom: 30rpx;
+    margin-top: 20rpx;
 }
 
 .bgBannerBox image {
@@ -38,9 +40,7 @@
 
 .list {
     overflow: hidden;
-    border-radius: 10px;
     background-color: rgb( 255, 255, 255 );
-    box-shadow: 0px 1px 3px 1px rgba( 38, 160, 245, 0.4 );
     margin: 0 30rpx;
 }
 
@@ -48,27 +48,35 @@
     float: left;
     width: 33%;
     color: #333333;
-    font-size: 24rpx;
+    font-size: 28rpx;
     text-align: center;
     margin: 30rpx 0;
 }
 
 .list > view image {
-    width: 115rpx;
-    height: 115rpx;
+    width: 90rpx;
+    height: 90rpx;
     display: block;
-    margin: 0 auto;
+    margin: 0 auto 15rpx;
 }
 
 .telBox {
-    width: 90rpx;
     height: 80rpx;
-    position: fixed;
-    right: 0px;
-    bottom: 30%;
+    line-height: 80rpx;
+    font-size: 28rpx;
+    color: #333333;
+    font-weight: bold;
+    text-align: center;
+    box-shadow: 0px 1px 3px 1px rgba( 38, 160, 245, 0.4 );
+    border-radius: 40rpx;
+    margin: 30rpx 30rpx;
+    box-sizing: border-box;
 }
 
 .telBox image {
-    width: 100%;
-    height: 100%;
+    width: 36rpx;
+    height: 36rpx;
+    display: inline-block;
+    vertical-align: middle;
+    margin-top: -6rpx;
 }
