--- a/pages/indexVolunteerList/index.wxss
+++ b/pages/indexVolunteerList/index.wxss
@@ -1,62 +1,62 @@
-/* pages/volunteerList/volunteerList.wxss */
-.volunteerListContainer {
-    padding: 20rpx 30rpx;
-}
-
-.volunteerListContainer .list {
-    overflow: hidden;
-    padding: 10px 15px;
+.userContainer .userList {
     background: #fff;
+    box-shadow: 0px 1px 3px 1px rgba(38, 160, 245, 0.4);
+    border-radius: 10px;
+    margin: 30rpx;
+}
+
+.userContainer .userList ul {
+    display: block;
+    padding: 0 15px;
+}
+
+.userContainer .userList ul li {
+    display: block;
+    height: 45px;
+    line-height: 45px;
     border-bottom: 1px solid #ccc;
-    border-radius: 10px;
-    margin-bottom: 5px;
+    color: #333;
+    font-size: 15px;
+    font-weight: bold;
+    position: relative;
 }
 
-.volunteerListContainer .list image {
-    width: 55px;
-    height: 55px;
-    border-radius: 50%;
-    float: left;
-    margin-right: 10px;
+.userContainer .userList ul li:last-child {
+    border-bottom: none;
 }
 
-.volunteerListContainer .list .contern {
-    overflow: hidden;
-}
-
-.volunteerListContainer .list .contern .name {
-    color: #333333;
-    font-size: 16px;
-    font-weight: 600;
+.userContainer .userList ul li::after {
+    content: "";
+    position: absolute;
+    right: 0px;
+    top: 15.5px;
+    width: 7px;
+    height: 14px;
     display: block;
+    z-index: 99;
+    background-image: url("https://file.yunji01.com/committee/000015/20180707/20180707174224132260.png");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
-.volunteerListContainer .list .contern .name text {
-    width: 24px;
-    height: 10px;
-    line-height: 10px;
+.userContainer .userList ul li text {
+    position: absolute;
+    right: 20px;
+    top: 13.5px;
     background: #e3393c;
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 50%;
     color: #fff;
-    font-size: 10px;
-    padding: 2px;
-}
-
-.volunteerListContainer .list .contern .itemType {
-    overflow: hidden;
-    margin: 5px 0;
-}
-
-.volunteerListContainer .list .contern .itemType text {
-    float: left;
-    width: 33%;
-    color: #666666;
-    font-size: 13px;
-}
-
-.volunteerListContainer .list .contern .tims {
-    color: #666666;
     font-size: 12px;
-    display: block;
+}
+
+.userContainer .userList image {
+    width: 45rpx;
+    height: 45rpx;
+    vertical-align: middle;
+    margin-top: -5px;
+    margin-right: 5px;
 }
