--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,7 @@
 <view class="auth">
     <view>
         <image src="../image/logo.jpg" class='logo'></image>
-        <view class='title'>滨湖志愿者平台</view>
+        <view class='title'>滨湖社区志愿服务互助平台</view>
     </view>
     <button class="btns" open-type='getUserInfo' wx:if="{{canIUse}}" bindgetuserinfo='onAuth'>点击微信授权</button>
     <navigator wx:if="{{!canIUse}}" class="btns" open-type="reLaunch" hover-class="other-navigator-hover">已经授权点击调转</navigator>
